--- a/Totem/en.lproj/MainStoryboard.storyboard
+++ b/Totem/en.lproj/MainStoryboard.storyboard
@@ -39,7 +39,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="g4m-07-4hz" kind="modal" identifier="instructions" modalTransitionStyle="flipHorizontal" id="2Ms-tD-TsP"/>
+                                    <action selector="showSettings:" destination="2" eventType="touchUpInside" id="NRO-SY-1tl"/>
                                 </connections>
                             </button>
                             <switch opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="FpG-Xs-vvg">
@@ -77,7 +77,7 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Giz-h3-GOV">
                                 <constraints>
                                     <constraint firstAttribute="width" constant="73" id="Jx7-ZF-Bi0"/>
-                                    <constraint firstAttribute="height" constant="44" id="SrJ-LZ-DEe"/>
+                                    <constraint firstAttribute="height" constant="44" id="zvn-01-Ymh"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Logout" backgroundImage="buttonsleepnotpressed.png">
@@ -157,7 +157,7 @@
                                 </state>
                                 <state key="selected" backgroundImage="buttonimawakepressed.png"/>
                                 <connections>
-                                    <segue destination="uMc-f6-TO9" kind="push" identifier="toDream" id="1mI-Q6-3nj"/>
+                                    <action selector="awake:" destination="OK1-OK-jbV" eventType="touchUpInside" id="E0j-7R-TMh"/>
                                 </connections>
                             </button>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8vf-z6-3yi">
@@ -307,7 +307,7 @@
         <!--Instruction View Controller-->
         <scene sceneID="J7Y-mD-Rs3">
             <objects>
-                <viewController id="g4m-07-4hz" customClass="InstructionViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="instructions" id="g4m-07-4hz" customClass="InstructionViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8aw-j8-hdb">
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -366,54 +366,6 @@
         <image name="buttonsleeppressed.png" width="162" height="80"/>
         <image name="justhead.png" width="571" height="498"/>
     </resources>
-    <classes>
-        <class className="CPTGraphHostingView" superclassName="UIView">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/CPTGraphHostingView.h"/>
-        </class>
-        <class className="DreamViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/DreamViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="submitDream:"/>
-                <relationship kind="outlet" name="journal" candidateClass="UITextView"/>
-                <relationship kind="outlet" name="titleLabel" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="InstructionViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/InstructionViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="back:"/>
-                <relationship kind="outlet" name="doneButton" candidateClass="UIButton"/>
-            </relationships>
-        </class>
-        <class className="MPVolumeView" superclassName="UIView">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/MPVolumeView.h"/>
-        </class>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-        <class className="SleepViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/SleepViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="wakeUp"/>
-                <relationship kind="outlet" name="graphView" candidateClass="CPTGraphHostingView"/>
-                <relationship kind="outlet" name="queueSize" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="rootSumSquare" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="xAxis" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="yAxis" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="zAxis" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="TotemViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/TotemViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="logoutOfEvernote:" candidateClass="UIButton"/>
-                <relationship kind="action" name="showSettings:"/>
-                <relationship kind="action" name="useEvernote:" candidateClass="UISwitch"/>
-                <relationship kind="outlet" name="evernoteSwitch" candidateClass="UISwitch"/>
-                <relationship kind="outlet" name="logoutButton" candidateClass="UIButton"/>
-            </relationships>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
